fix position of popup on mobile

--- a/src/styles/components/app.scss
+++ b/src/styles/components/app.scss
@@ -5,4 +5,7 @@
   flex-direction: column;
   text-align: left;
   align-items: flex-start;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
